first commit for 2.305.1

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dynatrace/cordova-plugin",
-  "version": "2.291.1",
+  "version": "2.305.1",
   "description": "This plugin gives you the ability to use the Dynatrace instrumentation in your hybrid application (Cordova, Ionic, ..). It uses the Mobile Agent, the JavaScript Agent. The Mobile Agent will give you all device specific values containing lifecycle information and the Javascript Agent will allow you to manually instrument your JavaScript/TypeScript code out of the box (Typescript definitions included). The JavaScript Agent will cover the network calls and will automatically detect them.",
   "cordova": {
     "id": "@dynatrace/cordova-plugin",
@@ -21,7 +21,10 @@
     "install": "node ./scripts/InstallCap.js",
     "uninstall": "node ./scripts/UninstallCap.js",
     "lint": "eslint --cache src/**/*.ts --ignore-pattern .gitignore",
-    "lint:spec": "eslint --cache tests/**/*.ts --cache-file tests/.eslintcache --ignore-pattern .gitignore"
+    "lint:spec": "eslint --cache tests/**/*.ts --cache-file tests/.eslintcache --ignore-pattern .gitignore",
+    "prettier:check": "prettier --check ./src",
+    "prettier:write": "prettier --write ./src",
+    "prepare": "husky"
   },
   "keywords": [
     "Dynatrace",
@@ -37,8 +40,8 @@
   "homepage": "https://www.dynatrace.com/",
   "license" : "SEE LICENSE IN LICENSE.md",
   "dependencies": {
-    "axios": "^1.6.8",
-    "jsdom": "^24.0.0",
+    "axios": "^1.7.9",
+    "jsdom": "^22.1.0",
     "plist": "^3.1.0"
   },
   "devDependencies": {
@@ -57,7 +60,9 @@
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-unicorn": "^41.0.1",
     "cordova": "^12.0.0",
+    "husky": "^9.1.6",
     "jest": "^29.2.2",
+    "jest-junit": "^12.2.0",
     "mock-fs": "^5.2.0",
     "npm-check-updates": "^12.5.8",
     "prettier": "^2.6.1",
@@ -79,6 +84,14 @@
     "typings/main.d.ts",
     "package.json"
   ],
+  "jest-junit": {
+		"suiteName": "jest tests",
+		"outputDirectory": ".",
+		"outputName": "junit.xml",
+		"uniqueOutputName": "true",
+		"ancestorSeparator": " › ",
+		"usePathForSuiteName": "true"
+	},
   "lint-staged": {
     "*.ts": "eslint --cache --fix",
     "**/*": "prettier --write"
