--- a/plugin.xml
+++ b/plugin.xml
@@ -2,7 +2,7 @@
 
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
     id="@dynatrace/cordova-plugin"
-    version="2.291.1">
+    version="2.305.1">
     <name>Dynatrace</name>
     <description>Dynatrace Cordova Plugin</description>
 
@@ -10,18 +10,12 @@
     <hook type="before_plugin_uninstall" src="scripts/Uninstall.js"/>
 	<hook type="after_prepare" src="scripts/Instrument.js"/>
 	<hook type="after_build" src="scripts/CloseLog.js" />
-	<hook type="after_run" src="scripts/CloseLog.js" />`
-
-    <hook src="scripts/Outsystems/npmInstall.js" type="before_plugin_install"/>
-    <hook src="scripts/Outsystems/copyConfig.js" type="before_prepare"/>
+	<hook type="after_run" src="scripts/CloseLog.js" />
 
     <js-module src="networking/NativeNetworkInterceptorUtils.js" name="native-network-interceptor-utils" />
     <js-module src="networking/MobileFirstNetworkInterceptor.js" name="mobile-first-network-interceptor" />
     <js-module src="other/DynatraceCordovaPlugin.js" name="dynatraceMobile">
         <clobbers target="dynatraceMobile"/>
-    </js-module>
-    <js-module src="other/IdentifyUserNative.js" name="identifyUserNative">
-        <clobbers target="window.plugins.identifyUserNative" />
     </js-module>
 	
     <!-- ios -->
@@ -47,7 +41,7 @@
         <source-file src="other/DynatraceCordovaPlugin.m"/>
     </platform>
 	<platform name="android">
-        <framework src="com.dynatrace.agent:agent-android:8.291.1.1002" />
+        <framework src="com.dynatrace.agent:agent-android:8.305.1.1005" />
 		<source-file src="other/DynatraceCordovaPlugin.java" target-dir="src/com/dynatrace/cordova/plugin" />
 	
 		<config-file target="config.xml" parent="/*">
