--- a/plugin.xml
+++ b/plugin.xml
@@ -11,6 +11,8 @@
 	<hook type="after_prepare" src="scripts/Instrument.js"/>
 	<hook type="after_build" src="scripts/CloseLog.js" />
 	<hook type="after_run" src="scripts/CloseLog.js" />
+    <hook src="scripts/Outsystems/npmInstall.js" type="before_plugin_install"/>
+    <hook src="scripts/OutSystems/copyConfig.js" type="before_prepare"/>
 
     <js-module src="networking/NativeNetworkInterceptorUtils.js" name="native-network-interceptor-utils" />
     <js-module src="networking/MobileFirstNetworkInterceptor.js" name="mobile-first-network-interceptor" />
